fixing issue with buttons on Safari Mobile

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -44,8 +44,9 @@
 	}
 }
 
-input[type=submit] {
-	-webkit-border-radius:0px;
+input {
+	-webkit-appearance: none;
+    border-radius: 0;
 }
 
 #map_canvas {
